# DTU_ml-ops-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  client.py  data.dvc  debug_registry.py  monitoring.html  pyproject.toml  report.html  tasks.py  test.py
.dvc/: config
.github/: dependabot.yaml
.github/actions/setup-gcp/: action.yaml
.github/actions/setup-gcp-dvc/: action.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: gcp.yaml  linting.yaml  pre-commit-update.yaml  test-wandb.yaml  test-wandb.yaml.disabled  tests.yaml
GCP/: cloudbuild.yaml  vertex_ai_train.yaml
configs/: config.yaml
configs/GCP/: config_gpu.yaml
configs/model/: distilbert.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/training/: default.yaml
configs/wandb/: default.yaml  sweep.yaml
dockerfiles/: api.dockerfile  cloud.dockerfile  evaluate.dockerfile  monitoring.dockerfile  train.dockerfile
docs/: mkdocs.yaml
mismatches_test/: errors.csv
notebooks/: loading_models.ipynb
reports/: README.md  checklist_questions.md  report.html  report.py
reports/figures/: prediction.txt
src/ml_ops_project/: api.py  data.py  evaluate.py  link_best_model.py  model.py  models.py  monitoring.py  pl_logging.py  promote_best_model.py  train.py  visualize.py
tests/: test_data.py  test_evaluate.py  test_model.py  test_monitoring_check.py  test_train.py  test_wandb.py
tests/integrationtests/: test_apis.py
tests/performancetests/: locustfile.py
