[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "ml_ops_project"
version = "0.0.1" # major.minor.patch
description = "Repository for the DTU Machine Learning Operations project."
authors = [
    { name = "Vincent Van Schependom", email = "vincent.van.schependom@gmail.com" },
    { name = "Malthe August Bresler" },
    { name = "Sara Maria Bjørn Andersen" },
    { name = "Frederik Ravnborg" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "fastapi==0.128.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pytorch-lightning>=2.6.0",
    "notebook>=7.5.1",
    "torch>=2.2.2",
    "transformers>=4.57.3",
    "typer==0.21.1",
    "uvicorn==0.40.0",
    "wandb>=0.23.1",
    "torchmetrics>=1.0.0",
    "numpy=1.26.4",
]

# Optional dependency groups, which can be installed using:
#    uv sync --group dev
# To install all groups, use:
#    uv sync --all-groups
[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.1",
    "mkdocs-material>=9.5.0",
    "mkdocs>=1.6.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.11",
    "mkdocstrings[python]>=0.28.0",
    "hydra-core>=1.3.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]
