[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "ml_ops_project"
version = "0.0.1" # major.minor.patch
description = "Repository for the DTU Machine Learning Operations project."
authors = [
    { name = "Vincent Van Schependom", email = "vincent.van.schependom@gmail.com" },
    { name = "Malthe August Bresler" },
    { name = "Sara Maria Bjørn Andersen" },
    { name = "Frederik Ravnborg" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "fastapi==0.128.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pytorch-lightning>=2.6.0",
    "notebook>=7.5.1",
    "torch>=2.2.2",
    "transformers>=4.57.3",
    "typer==0.21.1",
    "uvicorn==0.40.0",
    "wandb>=0.23.1",
    "torchmetrics>=1.0.0",
    "numpy==2.4.1",
    "google-api-python-client>=2.188.0",
    "dvc-gs>=3.0.2",
    "dvc>=3.66.1",
    "python-dotenv>=1.2.1",
    "markdown>=3.10",
    "pydantic>=2.12.5",
    "hydra-core>=1.3.2",
    "prometheus-client>=0.24.1",
    "nltk>=3.9.2",
    "evidently>=0.7.20",
    "locust>=2.43.1",
    "google-cloud-run>=0.14.0",
]

# Optional dependency groups, which can be installed using:
#    uv sync --group dev
# To install all groups, use:
#    uv sync --all-groups
[dependency-groups]
dev = [
    "coverage==7.13.1",
    "invoke==2.2.1",
    "mkdocs-material>=9.5.0",
    "mkdocs>=1.6.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.13",
    "mkdocstrings[python]>=0.28.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
]
inference-api = [
    "fastapi>=0.128.0",
    "google-cloud-storage>=3.8.0",
    "hydra-core>=1.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pytorch-lightning>=2.6.0",
    "torch>=2.2.2",
    "torchmetrics>=1.8.2",
    "transformers>=4.57.5",
    "uvicorn>=0.40.0",
    "wandb>=0.24.0",
]




[tool.ruff]
line-length = 120

# This part triggers coverage automatically when you run 'pytest'
[tool.pytest.ini_options]
addopts = "--cov=src/ml_ops_project --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:The `Scope.user` setter is deprecated.*:DeprecationWarning:wandb\\.analytics\\.sentry",
    "ignore:Read the `app_url` setting.*:DeprecationWarning:wandb\\.apis\\.public\\.api",
]

# This part fine-tunes the coverage engine
[tool.coverage.run]
source = ["src/ml_ops_project"]
omit = [
    "tests/*",
    "**/__init__.py"
]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
